[package]
name = "assemble"
version = "0.1.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "assemble following a set of defined instructions in a YAML file"
documentation = "https://github.com/nbari/assemble"
homepage = "https://github.com/nbari/assemble"
repository = "https://github.com/nbari/assemble"
readme = "README.md"
keywords = ["assemble", "build", "pack", "deploy", "make"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/assemble", branch = "master" }

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
termcolor = "1.1"
compound_duration = "1"
chrono = "0.4"
