[package]
name = "assemble"
version = "0.1.3"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "assemble following a set of defined instructions in a YAML file"
documentation = "https://github.com/nbari/assemble"
homepage = "https://github.com/nbari/assemble"
repository = "https://github.com/nbari/assemble"
readme = "README.md"
keywords = ["assemble", "build", "pack", "deploy", "make"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/assemble", branch = "master" }

[dependencies]
blake2s_simd = "0.5.10"
chrono = "0.4"
clap = "2.33"
compound_duration = "1"
futures = "0.1.29"
git2 = "0.13"
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_s3 = "0.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile ="3"
termcolor = "1.1"
xz2 = "0.1"
